# animacy

./: .gitignore  README.md  pyproject.toml
data/: VanArsdall_Blunt_NormData.xlsx  default_roles.csv  selected_words.csv  selected_words_gemma_resume.csv
docs/: app.js  data_manifest.json  index.html  styles.css  viewer.html
docs/data/Qwen3-30B-A3B-Instruct-2507/: AI assistant.json  AI.json  DEFAULT.json  angel.json  arm.json  army.json  assistant.json  bacteria.json  banker.json  barrel.json  basement.json  beetle.json  biologist.json  bloom.json  blossom.json  blouse.json  bucket.json  bug.json  building.json  bush.json  butler.json  captain.json  chef.json  chemist.json  cigar.json  clam.json  clove.json  coat.json  config.toml  continent.json  cop.json  corridor.json  crater.json  cricket.json  daisy.json  deck.json  demon.json  dentist.json  desk.json  dragon.json  (+87 more)
docs/data/gemma-3-27b-it/: AI assistant.json  AI.json  DEFAULT.json  angel.json  arm.json  army.json  assistant.json  bacteria.json  banker.json  barrel.json  basement.json  beetle.json  biologist.json  bloom.json  blossom.json  blouse.json  bucket.json  bug.json  building.json  bush.json  butler.json  captain.json  chef.json  chemist.json  cigar.json  clam.json  clove.json  coat.json  config.toml  continent.json  cop.json  corridor.json  crater.json  cricket.json  daisy.json  deck.json  demon.json  dentist.json  desk.json  dragon.json  (+87 more)
qualitative/: analysis_inanimate.md  analysis_insects.md  analysis_plants.md  codebook.md  old_man_tiber_analysis.md  qualitative_analysis.md  qualitative_research_report.md
results/activations/analysis/: activation_analysis_deny_experience.py  compute_role_vectors.ipynb
results/activations/scripts/: download_expected_activations.py  run_experiment.py
results/logits/analysis/: create_notebook.py  logits_results.ipynb
results/logits/scripts/: extract_logits.py
results/q_responses/: README.md
results/q_responses/scripts/: build_site.py  run_experiment.py  runpod_setup.sh
results/ratings/scripts/: rate_responses.py  refusal_stats.R
results/steering/analysis/: steering_analysis.ipynb
results/steering/scripts/: generate_role_jsons.py  run_all_experiments.sh  run_all_experiments_gemma.sh  run_all_experiments_qwen.sh  run_steering_experiment.py  viz_steering_efficiency.R  viz_steering_efficiency_word_guess.R
scripts/: chat.py  select_word_groups.py
src/animacy/activations/: __init__.py  data.py  extractor.py  token_mapper.py
tests/: test_activation_extraction.py  test_activations.py  test_default_role_handling.py  test_gemma_integration.py  test_gemma_steering.py  test_rate_responses_checkpoint.py  test_serialization.py  test_steering.py  test_steering_performance.py
(+337 files in other folders)
